# Intro-Skipper

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  pyproject.toml
.github/workflows/: release.yml
src/intro_skipper/: application.py  chrome_executable_prompt.py  command_line_arguments.py  entry_point.py  logging_configuration.py  remote_control.py  remote_page.html  skipping_settings.py  skipping_switch.py  streaming_tab_finder.py  update_notification.py
src/intro_skipper/browser/: browser_connection.py  chrome_connection.py  chrome_launcher.py
src/intro_skipper/helpers/: constants.py  enums.py
src/intro_skipper/services/: streaming_service.py  streaming_service_catalog.py
tests/functional/: browser_fakes.py  test_chrome_executable_prompt.py  test_chrome_launcher.py  test_logging_configuration.py  test_quiet_server_errors.py  test_remote_control.py  test_skip_behavior.py  test_update_notification.py
tests/unit/: test_command_line_arguments.py  test_streaming_service_recognition.py
