[project]
name = "intro-skipper"
version = "1.0.0"
description = "Überspringt Intros, Rückblicke und Abspänne beim Chromecast-Tab-Streaming von Netflix, Disney+ und Amazon Prime Video."
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
    "websocket-client>=1.8",
]

[dependency-groups]
dev = [
    "pytest",
    "black",
    "radon",
    "skylos",
    "pydeps",
    "complexipy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intro_skipper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
